Scrollbar Issue fixed - Template - 19 Sep 2024

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,11 @@
   box-sizing: border-box;
 }
 
+
+* {
+  outline: 1px solid red;
+}
+
 html {
 
   /* Modern browsers: reserve space for scrollbar */
